--- a/DeflectionOfMembrane.ipynb
+++ b/DeflectionOfMembrane.ipynb
@@ -48,6 +48,9 @@
     "v = TestFunction(V)\n",
     "a = dot(grad(w), grad(v))*dx\n",
     "L = p*v*dx\n",
+    "\n",
+    "# solution\n",
+    "\n",
     "w = Function(V)\n",
     "solve(a == L, w, bc)\n",
     "\n",
@@ -57,8 +60,8 @@
     "\n",
     "plt.figure(figsize=(6,5), dpi=150)\n",
     "\n",
-    "c = plot(w, cmap=\"plasma\")      # scalar field\n",
-    "plot(mesh, color=\"white\", linewidth=0.25)  # overlay mesh\n",
+    "c = plot(w, cmap=\"plasma\")      \n",
+    "plot(mesh, color=\"white\", linewidth=0.25)  \n",
     "\n",
     "plt.colorbar(c, label=r\"$w(x,y)$\")\n",
     "plt.xlabel(r\"$x$\")\n",
